# edmondson1999

./: .gitignore  README.ja.md  README.md  pyproject.toml
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  reproduction.ja.md  reproduction.md  usecases.ja.md  usecases.md  visualization.ja.md  visualization.md
simulation/: Cargo.toml
simulation/src/: config.rs  lib.rs  llm.rs  main.rs  mechanisms.rs  metrics.rs  prompts.rs  simulation.rs  world.rs
simulation/tests/: integration_test.rs
tools/: pyproject.toml
tools/src/edmondson_tools/: __init__.py  cli.py  reproduce_paper.py  show_experiment_settings.py  visualize.py  visualize_sweep.py
