[project]
name = "edmondson-tools"
version = "0.1.0"
description = "Edmondson (1999) Psychological Safety & Team Learning — visualization, sweep analysis, and Table 4-8 reproduction tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "socsim-tools",
]

[project.scripts]
edmondson-tools = "edmondson_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edmondson_tools"]
